# cargo-vendor

./: Cargo.toml
src/: main.rs
tests/: vendor.rs
