[package]
name = "cargo-vendor"
version = "0.1.23"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["subcommand"]
repository = "https://github.com/alexcrichton/cargo-vendor"
description = """
A Cargo subcommand to vendor all crates.io dependencies onto the local
filesystem.
"""
edition = "2021"

[dependencies]
cargo = "0.77"
cargo-util = "0.2"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
openssl = { version = "0.10", optional = true }

[dev-dependencies]
once_cell = "1.19"

[features]
vendored-openssl = ["openssl/vendored"]
